--- a/.env-sample
+++ b/.env-sample
@@ -7,6 +7,11 @@
 DATABASE_URL="mysql://root:@localhost:3306/expanseTracker"
 
 
-APP_PORT=3000
+DB_HOST="localhost",
+DB_USER="root",
+DB_PORT=3306,
+DB_PASSWORD="",
+DB_NAME="expanseTracker",
 
-APP_KEY="12345"
+APP_PORT=3000,
+APP_KEY="12345",
