--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "--watch --ignore-watch node_modules --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +13,14 @@
   "dependencies": {
     "@prisma/client": "^5.4.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql-all-in-one": "^4.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
     "@types/node": "^20.8.3",
     "prisma": "^5.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
