--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "--watch --ignore-watch node_modules --exec ts-node src/index.ts"
+    "dev": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
