--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql-all-in-one": "^4.6.3"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.3",
     "prisma": "^5.4.1",
     "ts-node": "^10.9.1",
