feat: api basic finishing

--- a/envs/database.env
+++ b/envs/database.env
@@ -1,20 +1,8 @@
 # Environment variables declared in this file are automatically made available to Prisma.
-
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+DATABASE_URL="mysql://root:@host.docker.internal:3306/expanseTracker"
 
-DATABASE_URL="mysql://root:@localhost:3306/expanseTracker"
 
-DB_HOST="localhost"
-DB_USER="root"
-DB_PORT=3306
-DB_PASSWORD=""
-DB_NAME="expanseTracker"
-
-APP_PORT=3031
-APP_KEY="12345"
-
-TOKEN_KEY="hu12uh"
